<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="P_VFD_Test" Id="{b9820e2d-5fe0-4c11-8c37-7481c881e079}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_VFD_Test
VAR
	tonVFDTest					: TON;
	ftrigStop					: F_TRIG;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Calvin - P_VFD_Test
// Rev 1.00 - July 14, 2023

IF gbVFDTest THEN
	tgr_IP_1102A								:= 100;
	tgr_IP_1102B								:= 100;
	IF tgb_IP_1102A_Open AND tgb_IP_1102B_Open AND tonVFDTest.Q THEN
		tonVFDTest(IN:= FALSE);
		IF tgr_HS_1102 = 80 THEN
			tgr_HS_1102							:= 0;
		ELSE
			tgr_HS_1102							:= 80;
		END_IF
	END_IF
	tonVFDTest(IN:= TRUE, PT:= T#30S);
END_IF

ftrigStop(CLK:= gbVFDTest);
IF ftrigStop.Q THEN
	tgr_HS_1102									:= 0;
	tgr_IP_1102A								:= 0;
	tgr_IP_1102B								:= 0;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="P_VFD_Test">
      <LineId Id="45" Count="2" />
      <LineId Id="9" Count="0" />
      <LineId Id="15" Count="1" />
      <LineId Id="10" Count="1" />
      <LineId Id="21" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="36" Count="1" />
      <LineId Id="35" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>